--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,5 +11,5 @@
             </div>
         </div>
     </div>
-    <div class="right-container">Login Pannel/Regist Panel</div>
+    <div class="right-container"><app-login></app-login></div>
 </div>
