--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -87,7 +87,7 @@
         background-color: #1c1c1c83;
         height: 120px;
         display: flex;
-        justify-content: center;
+        justify-content: flex-end;
         align-items: center;
         position: absolute;
         top: 50px;
