--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -1,10 +1,11 @@
 .loginfield{
     width: 100%;
+    height: 160px;
     display: flex;
     justify-content: center;
     align-items: flex-end;
     flex-direction: column;
-    gap: 5px;
+    gap: 15px;
     position: absolute;
     right: 10px;
     top: 50%;
@@ -15,7 +16,6 @@
         justify-content: center;
         align-items: center;
         gap: 10px;
-        width: 410px;
 
         input{
             width: 150px;
@@ -42,29 +42,29 @@
                 border: 1px solid #e20505c7;
             }
         }
+    }
 
-        .login-button{
-            width: 100px;
-            height: 35px;
-            background-color: transparent;
-            border: 1px solid #9c06069f;
-            border-radius: 5px;
-            color: white;
-            font-size: 14px;
-            cursor: pointer;
-            transition: all 500ms ease-in-out;
+    .login-button{
+        width: 155px;
+        height: 35px;
+        background-color: transparent;
+        border: 1px solid #9c06069f;
+        border-radius: 5px;
+        color: white;
+        font-size: 14px;
+        cursor: pointer;
+        transition: all 500ms ease-in-out;
 
-            &:hover{
-                border: 1px solid #e20505c7;
-            }
+        &:hover{
+            border: 1px solid #e20505c7;
         }
     }
 
     .login-links{
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        width: 400px;
+        align-items: flex-end;
+        width: 300px;
         margin-left: 5px;
         margin-right: 5px;
 
