--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,15 +1,5 @@
 <div class="header">
     <div class="left-container">Logo/Name</div>
-    <div class="middle-container">
-        <div class="rotate-box" (click)="openGameDay()" #rotateBox>
-            <p  class="gameday-title">Next GameDay</p>
-            <p class="location">{{location}}</p>
-            <div class="gameday-content">
-                <p>{{countDown}}</p>
-                <p>{{time}}</p>
-                <p>{{date}}</p>
-            </div>
-        </div>
-    </div>
+    <div class="middle-container"><app-gamedaycounter></app-gamedaycounter></div>
     <div class="right-container"><app-login></app-login></div>
 </div>
