--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -12,18 +12,19 @@
     position: relative;
 
     .left-container{
-        width: calc(50vw - 200px);
+        width: calc(50vw - 50px);
         background-color: #1c1c1c83;
-        height: 120px;
+        height: 180px;
         display: flex;
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 50px;
+        top: 20px;
         left: 10px;
         border-radius: 15px;
         color: white;
         box-shadow: 0 0 6px #9c06069f;
+        z-index: 0;
     }
 
     .middle-container {
@@ -33,67 +34,22 @@
         top: 11px;
         left: 50%;
         transform: translateX(-50%);
-        cursor: pointer;
-
-        .rotate-box {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #1c1c1c;
-            border-radius: 10px;
-            transform: rotate(45deg);
-            box-shadow: 0 0 6px #9c06069f;
-
-            .gameday-title{
-                position: absolute;
-                top: 10px;
-                right: 10px;
-                color: white;
-                font-size: 16px;
-                text-shadow: 3px 4px 0px rgb(156 6 6 / 70%);
-            }
-
-            .location{
-                position: absolute;
-                bottom: 60px;
-                left: -40px;
-                color: white;
-                font-size: 16px;
-                transform: rotate(-90deg);
-                text-shadow: 3px 4px 0px rgb(156 6 6 / 70%);
-            }
-
-            .gameday-content{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-                position: absolute;
-                bottom: -20px;
-                right: -20px;
-                gap: 10px;
-                width: 100%;
-                height: 100%;
-                transform: rotate(-45deg);
-                color: white;
-            }
-        }
+        z-index: 1;
     }
 
     .right-container{
-        width: calc(50vw - 200px);
+        width: calc(50vw - 50px);
         background-color: #1c1c1c83;
-        height: 120px;
+        height: 180px;
         display: flex;
         justify-content: flex-end;
         align-items: center;
         position: absolute;
-        top: 50px;
+        top: 20px;
         right: 10px;
         border-radius: 15px;
         color: white;
         box-shadow: 0 0 6px #9c06069f;
+        z-index: 0;
     }
 }
