--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,11 @@ p{
     margin-block-start: 0;
     margin-block-end: 0;
 }
+
+input{
+    font-family: 'Orbitron';
+}
+
+button{
+    font-family: 'Orbitron';
+}
