gameday counter optimized

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,7 @@
 <div class="header">
-    <div class="left-container">Logo/Name</div>
+    <div class="left-container">
+        <img src="assets/img/logo/logo.png" class="logo-header" alt="">
+    </div>
     <div class="middle-container"><app-gamedaycounter></app-gamedaycounter></div>
     <div class="right-container"><app-login></app-login></div>
 </div>
