--- a/src/app/shared/gamedaycounter/gamedaycounter.component.html
+++ b/src/app/shared/gamedaycounter/gamedaycounter.component.html
@@ -1,6 +1,7 @@
 <div class="rotate-box" (click)="openGameDay()" #rotateBox>
     <p  class="gameday-title">{{gameTitle}}</p>
     <p class="location">{{location}}</p>
+    <div class="noGameDay">{{load}}</div>
     <div class="gameday-content">
         <p>{{countDown}}</p>
         <p>{{time}}</p>
