--- a/src/app/shared/gamedaycounter/gamedaycounter.component.scss
+++ b/src/app/shared/gamedaycounter/gamedaycounter.component.scss
@@ -43,4 +43,10 @@
         transform: rotate(-45deg);
         color: white;
     }
+
+    .noGameDay{
+        display: flex;
+        transform: rotate(-45deg);
+        color: white;
+    }
 }
