--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,3 +5,4 @@
     <div class="middle-container"><app-gamedaycounter></app-gamedaycounter></div>
     <div class="right-container"><app-login></app-login></div>
 </div>
+<app-menu></app-menu>
