app.router.ts update, pwforgot - aboutus - events - locations and sale component added

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -5,7 +5,7 @@
     </div>
     <button (click)="login()" class="login-button">Login</button>
     <div class="login-links">
-            <a href="#register">Registrieren</a>
-            <a href="#pwforgot">Passwort vergessen?</a>        
+            <a (click)="regist()">Registrieren</a>
+            <a (click)="pwforgot()">Passwort vergessen?</a>        
     </div>
 </div>
