--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,16 +1,16 @@
 <div class="menu">
     <div class="left">
-        <div class="content">Start</div>
-        <div class="content">Kalender</div>
-        <div class="content">Galerie</div>
-        <div class="content">Verkauf</div>
+        <div class="content" (click)="home()">Start</div>
+        <div class="content" (click)="calender()">Kalender</div>
+        <div class="content" (click)="galery()">Galerie</div>
+        <div class="content" (click)="sale()">Verkauf</div>
         <div class="contentend"></div>
     </div>
     <div class="right">
-        <div class="content">Über Uns</div>
-        <div class="content">Events</div>
-        <div class="content">Shops</div>
-        <div class="content">News</div>
+        <div class="content" (click)="locations()">Arenen</div>
+        <div class="content" (click)="events()">Events</div>
+        <div class="content" (click)="shops()">Shops</div>
+        <div class="content" (click)="news()">News</div>
         <div class="contentend"></div>
     </div>
 </div>
