--- a/src/app/component/login/login.component.scss
+++ b/src/app/component/login/login.component.scss
@@ -72,6 +72,7 @@
             color: white;
             font-size: 12px;
             text-decoration: none;
+            cursor: pointer;
 
             &:hover{
                 text-decoration: underline;
