--- a/src/app/component/regist/regist.component.html
+++ b/src/app/component/regist/regist.component.html
@@ -1,1 +1,35 @@
-<p>regist works!</p>
+<div class="regist_site">
+    <p class="title">Registrierung</p>
+    <div class="fields  breaks">
+        <p>Vorname:</p>
+        <input type="text" class="inputfield">
+    </div>
+    <div class="fields">
+        <p>Nachname:</p>
+        <input type="text" class="inputfield">
+    </div>
+    <div class="fields">
+        <p>Loginname:</p>
+        <input type="text" class="inputfield">
+    </div>
+    <div class="fields">
+        <p>E-Mail:</p>
+        <input type="email" class="inputfield">
+    </div>
+    <div class="fields">
+        <p>Passwort:</p>
+        <input type="password" class="inputfield">
+    </div>
+    <div class="fields">
+        <p>Passwort wiederholen:</p>
+        <input type="password" class="inputfield">
+    </div>
+    <div class="fields">
+        <p>Register Code (<a (click)="sendCode()">anfordern?</a>):</p>
+        <input type="text" class="inputfield">
+    </div>
+    <div class="fields breaks">
+        <button class="button">Datenschutz</button>
+        <button class="button">Registrieren</button>
+    </div>
+</div>
