--- a/src/app/component/regcode/regcode.component.scss
+++ b/src/app/component/regcode/regcode.component.scss
@@ -100,3 +100,46 @@
         margin-top: 25px;
     }
 }
+
+
+.custom-dropdown {
+    position: relative;
+    width: 306px;
+}
+
+.dropdown-btn {
+    width: 100%;
+    height: 40px;
+    background: transparent;
+    border: 1px solid #9c06069f;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    text-align: left;
+    padding: 10px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.dropdown-list {
+    position: absolute;
+    width: 100%;
+    background: #333;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    z-index: 10;
+}
+
+.dropdown-item {
+    padding: 10px;
+    color: white;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.dropdown-item:hover {
+    background: #e20505c7;
+}
