--- a/src/app/component/regcode/regcode.component.scss
+++ b/src/app/component/regcode/regcode.component.scss
@@ -10,6 +10,8 @@
     border-radius: 10px;
     box-shadow: 0 0 6px #9c06069f;
     position: relative;
+    width: 95vw;
+    max-width: 1440px;
 
     .title{
         color: whitesmoke;
