--- a/src/app/component/locations/locations.component.scss
+++ b/src/app/component/locations/locations.component.scss
@@ -7,7 +7,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     gap: 25px;
-    padding: 15px;
+    padding: 35px 15px 15px 15px;
     background-color: #1c1c1c83;
     border-radius: 10px;
     box-shadow: 0 0 6px #9c06069f;
