--- a/src/app/component/regist/regist.component.scss
+++ b/src/app/component/regist/regist.component.scss
@@ -37,9 +37,14 @@
             color: whitesmoke;
         }
 
+        .inputDate{
+            width: 298px !important;
+            height: 34px !important;
+        }
+
         .inputfield
         {
-            width: 300px;
+            width: 295px;
             height: 30px;
             background-color: transparent;
             border: 1px solid #9c06069f;
@@ -48,6 +53,7 @@
             outline: none;
             color: white;
             font-size: 16px;
+            padding-left: 5px;
 
             &::placeholder
             {
@@ -101,4 +107,46 @@
     .breaks{
         margin-top: 25px;
     }
+}
+
+.custom-dropdown {
+    position: relative;
+    width: 304px;
+}
+
+.dropdown-btn {
+    width: 100%;
+    height: 34px;
+    background: transparent;
+    border: 1px solid #9c06069f;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    text-align: left;
+    padding: 5px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.dropdown-list {
+    position: absolute;
+    width: 100%;
+    background: #333;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    z-index: 10;
+}
+
+.dropdown-item {
+    padding: 10px;
+    color: white;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.dropdown-item:hover {
+    background: #e20505c7;
 }
