--- a/src/app/component/regcode/regcode.component.html
+++ b/src/app/component/regcode/regcode.component.html
@@ -1,30 +1,34 @@
 <div class="regist_site">
-    <p class="title">Registrierungscode anfordern</p>
-    <div class="fields  breaks">
-        <p>Vorname:</p>
-        <input type="text" class="inputfield">
-    </div>
-    <div class="fields">
-        <p>Nachname:</p>
-        <input type="text" class="inputfield">
-    </div>
-    <div class="fields">
-        <p>E-Mail:</p>
-        <input type="email" class="inputfield">
-    </div>
-    <div class="fields">
-        <p>Schon Mitglied:</p>
-        <div class="custom-dropdown" (clickOutside)="closeDropdown()">
-            <button class="dropdown-btn" (click)="toggleDropdown($event)">{{ selectedOption }}</button>
-            <div class="dropdown-list" *ngIf="dropdownOpen">
-                <div class="dropdown-item" *ngFor="let option of options" (click)="selectOption(option)">
-                    {{ option.label }}
-                </div>
+  <p class="title">Registrierungscode anfordern</p>
+  <div class="fields  breaks">
+    <p>Vorname:</p>
+    <input type="text" class="inputfield">
+  </div>
+  <div class="fields">
+    <p>Nachname:</p>
+    <input type="text" class="inputfield">
+  </div>
+  <div class="fields">
+    <p>E-Mail:</p>
+    <input type="email" class="inputfield">
+  </div>
+  <div class="fields">
+    <p>Schon Mitglied:</p>
+    <div class="custom-dropdown" (clickOutside)="closeDropdown()">
+      <button class="dropdown-btn" (click)="toggleDropdown($event)">{{ selectedOption }}</button>
+      @if (dropdownOpen) {
+        <div class="dropdown-list">
+          @for (option of options; track option) {
+            <div class="dropdown-item" (click)="selectOption(option)">
+              {{ option.label }}
             </div>
+          }
         </div>
+      }
     </div>
-    <div class="fields breaks">
-        <button class="button" onclick="history.back()">Zurück</button>
-        <button class="button">Registrieren</button>
-    </div>
+  </div>
+  <div class="fields breaks">
+    <button class="button" onclick="history.back()">Zurück</button>
+    <button class="button">Registrieren</button>
+  </div>
 </div>
