--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<app-startanimation></app-startanimation>
 <div class="top">
     <router-outlet></router-outlet>
 </div>
