--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="left-container">
-        <img src="assets/img/logo/logo.png" class="logo-header" alt="">
+        <img src="assets/img/logo/logo.png" class="logo-header" alt="" #start_intro>
     </div>
     <div class="middle-container"><app-gamedaycounter></app-gamedaycounter></div>
     <div class="right-container"><app-login></app-login></div>
