--- a/src/app/component/events/events.component.html
+++ b/src/app/component/events/events.component.html
@@ -1,1 +1,41 @@
-<p>events works!</p>
+<div class="events">
+    <p class="title">Events</p>
+    <div class="fields  breaks">
+        <div class="one_field">
+            <div class="top">
+                <div class="location">
+                    <img src="./../../../assets/img/areas/spieler.png">
+                    <p>Gotcha Zone</p>
+                </div>
+                <div class="datetime">
+                    <p>15.08.2025</p>
+                    <p>20:00 - 24:00 Uhr</p>
+                    <p>Zusagen: 15 Mitglieder</p>
+                </div>
+            </div>
+            <div class="discription">
+                <p class="dtitle">Beschreibung</p>
+                <p>Das Spiel ist Offen für alle die Lust haben.<br><br>Unser Partner Team "<a
+                        href="https://www.bse-paintball.de/" target="_blank">BSE</a>" ist auch am Start!</p>
+            </div>
+        </div>
+
+        <div class="one_field">
+            <div class="top">
+                <div class="location">
+                    <img src="./../../../assets/img/areas/spieler.png">
+                    <p>Gotcha Zone</p>
+                </div>
+                <div class="datetime">
+                    <p>13.12.2025</p>
+                    <p>20:00 - 1:00 Uhr</p>
+                    <p>Zusagen: 19 Mitglieder</p>
+                </div>
+            </div>
+            <div class="discription">
+                <p class="dtitle">Beschreibung</p>
+                <p>Das Spiel ist ausschließlich für unser Team, da es das Jahres abschluss Spiel ist.</p>
+            </div>
+        </div>
+    </div>
+</div>
