Token added, delete regcode after regist

--- a/src/app/component/regist/regist.component.html
+++ b/src/app/component/regist/regist.component.html
@@ -55,6 +55,6 @@
   </div>
   <div class="fields breaks">
     <button class="button">Datenschutz</button>
-    <button class="button" (click)="save()">Registrieren</button>
+    <button class="button" (click)="generateToken()">Registrieren</button>
   </div>
 </div>
