--- a/src/app/component/events/events.component.scss
+++ b/src/app/component/events/events.component.scss
@@ -31,6 +31,7 @@
         display: flex;
         justify-content: center;
         align-items: stretch;
+        flex-wrap: wrap;
         gap: 100px;
 
         p {
