--- a/src/app/component/regcode/regcode.component.scss
+++ b/src/app/component/regcode/regcode.component.scss
@@ -96,6 +96,13 @@
             }
         }
 
+        .True{
+            color: greenyellow;
+        }
+
+        .False {
+            color: red;
+        }
     }
 
     .breaks{
