--- a/src/app/component/regcode/regcode.component.scss
+++ b/src/app/component/regcode/regcode.component.scss
@@ -32,6 +32,7 @@
         width: 600px;
         display: flex;
         justify-content: space-between;
+        align-items: center;
 
         p{
             color: whitesmoke;
