added test admin, added online component, added pn center component, added logout component, login in function

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="loginfield">
+<div class="loginfield" #loginfield>
     <div class="fields">
-        <input type="text" placeholder="Login Name" [(ngModel)]="loginData.loginname">
+        <input type="text" placeholder="Login Name" [(ngModel)]="loginData.username">
         <input type="password" placeholder="Passwort" [(ngModel)]="loginData.password">
     </div>
     <button (click)="login()" class="login-button">Login</button>
@@ -8,4 +8,8 @@
             <a (click)="regist()">Registrieren</a>
             <a (click)="pwforgot()">Passwort vergessen?</a>        
     </div>
+</div>
+
+<div class="failedLogin" #failedLogin>
+    <p>{{ statusInfo }}</p>
 </div>
