--- a/src/app/component/regist/regist.component.scss
+++ b/src/app/component/regist/regist.component.scss
@@ -171,3 +171,38 @@
     display: none;
     color: red;
 }
+
+.datenschutz{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px;
+    background-color: #1c1c1c;
+    border-radius: 10px;
+    box-shadow: 0 0 6px #9c06069f;
+    color: whitesmoke;
+    width: 90dvw;
+    height: 90dvh;
+    z-index: 99999;
+    display: none;
+    text-wrap: wrap;
+    overflow-y: auto;
+    transition: all 500ms ease-in-out;
+
+    .button{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        cursor: pointer;
+        margin-bottom: 30px;
+        transition: all 250ms ease-in-out;
+        opacity: 1;
+
+        &:hover{
+            opacity: 0.5;
+            text-decoration: underline;
+            text-underline-offset: 5px;
+        }
+    }
+}
